fixed themes mobile spacing

--- a/UIcomponents/themeSelector/css/style.css
+++ b/UIcomponents/themeSelector/css/style.css
@@ -137,6 +137,9 @@ h5:nth-of-type(3) {
 }
 
 @media screen and (max-width: 416px) {
+	.theme-card {
+		margin: 2rem 1rem;
+	}
 	.theme-btn {
 		display: none;
 	}
